# git-scripts

./: .gitignore  .pre-commit-config.yaml  Justfile  README.md  create-new-script.sh  git-aliases.sh  git-amend  git-branch-current  git-branch-diff  git-branch-new_and_track  git-branch-set_tracking  git-branch-show  git-branch-tracking  git-check-dup  git-credit  git-dedupe  git-delete-local-merged  git-diff-123  git-diff-branch  git-diff-changed_files  git-diff-patch  git-diff-theirs_combined  git-diff-with-2nd-parent.rb  git-diff_with_prev  git-experiment  git-extract-folder  git-fetch-and-checkout.rb  git-find_file  git-incoming  git-log-merges.rb  git-log-search_all_commits  git-ls-by-date.sh  git-merge-test  git-merged-what-log  git-merged-what-show  git-merged-when  git-merged-when-all  git-merged-when2  git-move-after  git-move-before  (+28 more)
docs/plans/: 2026-03-01-merge-tree-conflict-detection-design.md  2026-03-01-merge-tree-conflict-detection.md  2026-03-08-git-wtf-upstream-flag-design.md  2026-03-08-git-wtf-upstream-flag.md
mcp-server/: README.md  pyproject.toml
mcp-server/git_scripts_mcp/: __init__.py  server.py
tests/: test_conflict_range_highlighting.py  test_git_delete_local_merged.py  test_git_diff_123.py  test_git_find_file.py  test_git_untracked_conflict.py  test_git_untracked_overwritten.py  test_git_wtf.py  test_mcp_remerge_output.py
