[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "git-scripts-mcp"
version = "1.0.0"
description = "MCP server for advanced Git safety scripts - battle-tested Git operations for Claude Code"
readme = "README.md"
license = "MIT"
authors = [
    { name = "Jimmy Y" }
]
keywords = [
    "mcp",
    "git",
    "version-control",
    "development-tools",
    "claude-code",
    "git-safety",
    "git-automation"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Software Development :: Version Control :: Git",
    "Topic :: Software Development :: Libraries :: Python Modules"
]
requires-python = ">=3.8"
dependencies = [
    "mcp>=1.0.0"
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0"
]

[project.scripts]
git-scripts-mcp = "git_scripts_mcp.server:main"

[project.urls]
Homepage = "https://github.com/your-username/git-scripts"
Repository = "https://github.com/your-username/git-scripts.git"
Issues = "https://github.com/your-username/git-scripts/issues"

[tool.black]
line-length = 88
target-version = ['py38']

[tool.ruff]
line-length = 88
target-version = "py38"
select = ["E", "F", "W", "I", "N", "UP", "YTT", "S", "B", "A", "COM", "DTZ", "T10", "EM", "G", "ICN", "PIE", "T20", "Q", "RSE", "RET", "SIM", "TID", "ARG", "PLE", "PLR", "PLW", "RUF"]
ignore = ["S101", "PLR0913", "PLR0912", "PLR0915"]

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_unreachable = true
strict_equality = true
